refactor: :recycle: Restructuring the entire html and css code
Basically i'm changing all the html and css because i'm following the code of the trainer

--- a/index.html
+++ b/index.html
@@ -10,309 +10,121 @@
 </head>
 <body>
     <header class="header">
-        <div class="header__title">Vehicle Overview</div>
+        <div id="header__title" class="header__title"></div>
     </header>
     <main class="main">
         <nav class="nav__description">
-            <div class="description__item">
-                <div class="description__container">
-                    <div>
-                        <i class='bx bxs-check-circle' style='color:#9499c3'  ></i>
-                    </div>
-                    <div>
-                        <h3>ALL SYSTEMS CHECK</h3>
-                        <small>Normal</small>
-                    </div>
-                </div>
-                <div class="description__container">
-                    <div>
-                        <i class='bx bxs-check-circle' style='color:#9499c3'  ></i>
-                    </div>
-                    <div>
-                        <h3>RENDEZVOUS BURN SLOW</h3>
-                        <small>Normal</small>
-                    </div>
-                </div>
-                <div class="description__container">
-                    <div>
-                        <i class='bx bxs-check-circle' style='color:#9499c3'  ></i>
-                    </div>
-                    <div>
-                        <h3>PREPARE RENDEZVOUS BURN</h3>
-                        <small>Normal</small>
-                    </div>
-                </div>
-                <div class="description__container">
-                    <div>
-                        <i class='bx bxs-check-circle' style='color:#40c110'  ></i>
-                    </div>
-                    <div>
-                        <h3>THERMAL SHIELD</h3>
-                        <small style="color: white;">Applied</small>
-                    </div>
-                </div>
-                <div class="description__container">
-                    <div>
-                        <i class='bx bxs-check-circle' style='color:#9499c3'  ></i>
-                    </div>
-                    <div>
-                        <h3>BURN GO/NO-GO</h3>
-                        <small>Normal</small>
-                    </div>
-                </div>
-                <div class="description__container">
-                    <div>
-                        <i class='bx bxs-check-circle' style='color:#ea7b15'  ></i>
-                    </div>
-                    <div>
-                        <h3>POWER COMPLETION</h3>
-                        <small style="color: white;">Awaiting</small>
-                    </div>
-                </div>
-                <div class="description__container">
-                    <div>
-                        <i class='bx bxs-check-circle' style='color:#9499c3'  ></i>
-                    </div>
-                    <div>
-                        <h3>STATION DECK CHECK</h3>
-                        <small>Normal</small>
-                    </div>
-                </div>
-                <div class="description__container">
-                    <div>
-                        <i class='bx bxs-check-circle' style='color:#9499c3'  ></i>
-                    </div>
-                    <div>
-                        <h3>UNKNOWN</h3>
-                        <small>Normal</small>
-                    </div>
-                </div>
-                <div class="description__container">
-                    <div>
-                        <i class='bx bxs-check-circle' style='color:#9499c3'  ></i>
-                    </div>
-                    <div>
-                        <h3>UNKNOWN</h3>
-                        <small>Normal</small>
-                    </div>
-                </div>
-                <div class="description__container">
-                    <div>
-                        <i class='bx bxs-check-circle' style='color:#9499c3'  ></i>
-                    </div>
-                    <div>
-                        <h3>UNKNOWN</h3>
-                        <small>Normal</small>
-                    </div>
-                </div>
-                <div class="description__container">
-                    <div>
-                        <i class='bx bxs-check-circle' style='color:#9499c3'  ></i>
-                    </div>
-                    <div>
-                        <h3>UNKNOWN</h3>
-                        <small>Normal</small>
-                    </div>
-                </div>
-                <div class="description__container">
-                    <div>
-                        <i class='bx bxs-check-circle' style='color:#9499c3'  ></i>
-                    </div>
-                    <div>
-                        <h3>UNKNOWN</h3>
-                        <small>Normal</small>
-                    </div>
-                </div>
-                <div class="description__container">
-                    <div>
-                        <i class='bx bxs-check-circle' style='color:#9499c3'  ></i>
-                    </div>
-                    <div>
-                        <h3>UNKNOWN</h3>
-                        <small>Normal</small>
-                    </div>
-                </div>
-                <div class="description__container">
-                    <div>
-                        <i class='bx bxs-check-circle' style='color:#9499c3'  ></i>
-                    </div>
-                    <div>
-                        <h3>UNKNOWN</h3>
-                        <small>Normal</small>
-                    </div>
-                </div>
-            </div>
+            <div id="description__item" class="description__item"></div>
             <div class="description__buttom">
-                <a href="#">SYSTEMS</a>
-                <a href="#">CABIN</a>
+                <a href="#">a</a>
+                <a href="#">b</a>
             </div>
         </nav>
         <section class="main__section">
-            <article class="section__item__1">
-                <div class="box_1"></div>
-                <div class="box_1"></div>
-                <div class="box_1"></div>
-                <div class="box_1"></div>
-                <div class="box_1"></div>
-                <div class="box_1"></div>
+            <article class="section__information__1">
+                <div class="carousel__item"></div>
+                <div class="carousel__item"></div>
+                <div class="carousel__item"></div>
+                <div class="carousel__item"></div>
             </article>
-            <article class="section__item__2">
-                <div class="box_2"></div>
-                <div class="box_2"></div>
-            </article>
-            <article class="section__item__3">
-                <img src="storage/img/EYMFT_GWoAUjZVf-removebg.png" alt="">
-            </article>
-            <article class="section__item__4">
-                <div class="box_4"></div>
-                <div class="box_4"></div>
-            </article>
-            <article class="section__item__5">
-                <h3>Connections</h3>
-                <div class="line"></div>
-                <div class="subcontainer">
+            <article class="section__information__container">
+                <div class="section__information__2">
                     <div>
-                        <p>Manual Rigs</p>
-                        <p><strong>Connected</strong></p>
+                        <div class="carousel__item"></div>
+                        <div class="carousel__item"></div>
                     </div>
+                    <div>Caja 2</div>
+                </div>
+                <div id="section__image" class="section__image"></div>
+                <div class="section__information__3">
                     <div>
-                        <p>Changelog</p>
-                        <p><strong>Connected</strong></p>
+                        <div class="carousel__item"></div>
+                        <div class="carousel__item"></div>
                     </div>
-                    <div>
-                        <p>Airlock</p>
-                        <p><strong>Connected</strong></p>
-                    </div>
-                    <div>
-                        <p>Wing</p>
-                        <p><strong>Connected</strong></p>
-                    </div>
+                    <div>Caja 2</div>
                 </div>
             </article>
             <footer class="footer">
                 <ul>
                     <li>
                         <a href="#">
-                            <img src="storage/img/icons/iconos/rocket.svg">
-                            <span>Overview</span>
+                            <img src="http://www.example.com">
+                            <span>a</span>
                         </a>
                     </li>
                     <li>
                         <a href="#">
-                            <i class='bx bx-body' style='color:#e72d2d'></i>
-                            <span>Life</span>
+                            <img src="http://www.example.com">
+                            <span>a</span>
                         </a>
                     </li>
                     <li>
                         <a href="#">
-                            <img src="storage/img/icons/iconos/comms.svg">
-                            <span>Comms</span>
+                            <img src="http://www.example.com">
+                            <span>a</span>
                         </a>
                     </li>
                     <li>
                         <a href="#">
-                            <img src="storage/img/icons/iconos/prop.svg">
-                            <span>Prop</span>
+                            <img src="http://www.example.com">
+                            <span>a</span>
                         </a>
                     </li>
                     <li>
                         <a href="#">
-                            <img src="storage/img/icons/iconos/mech.svg">
-                            <span>Mech</span>
+                            <img src="http://www.example.com">
+                            <span>a</span>
                         </a>
                     </li>
                     <li>
                         <a href="#">
-                            <i class='bx bxs-battery-charging bx-rotate-270' style='color:#ffffff'  ></i>
-                            <span>Power</span>
+                            <img src="http://www.example.com">
+                            <span>a</span>
                         </a>
                     </li>
                     <li>
                         <a href="#">
-                            <i class='bx bxs-chip' style='color:#ffffff'  ></i>
-                            <span>Avionics</span>
+                            <img src="http://www.example.com">
+                            <span>a</span>
                         </a>
                     </li>
                     <li>
                         <a href="#">
-                            <i class='bx bx-current-location bx-rotate-270' style='color:#ffffff'  ></i>
-                            <span>GNC</span>
+                            <img src="http://www.example.com">
+                            <span>a</span>
                         </a>
                     </li>
                     <li>
                         <a href="#">
-                            <i class='bx bxs-brightness-half' style="color: #fff"></i>
-                            <span>Thermal</span>
+                            <img src="http://www.example.com">
+                            <span>a</span>
                         </a>
                     </li>
                 </ul>
             </footer>
         </section>
         <nav class="nav__information">
-            <div class="information__item">
-                <div class="container">
-                    <div class="information__container">
-                        <div>
-                            <label for="file">Inertial Velocity</label>
-                            <progress id="file" max="100" value="70">70%</progress>
-                        </div>
-                        <div>
-                            <span>7.68 km/s</span>
-                        </div>
-                    </div>
-                    <div class="information__container">
-                        <div>
-                            <label for="file">Altitude</label>
-                            <progress id="file" max="100" value="70">70%</progress>
-                        </div>
-                        <div>
-                            <span>390.0 km</span>
-                        </div>
-                    </div>
-                    <div class="information__container">
-                        <div>
-                            <label for="file">Apogee</label>
-                            <progress id="file" max="100" value="70">70%</progress>
-                        </div>
-                        <div>
-                            <span>404.4 km</span>
-                        </div>
-                    </div>
-                    <div class="information__container">
-                        <div>
-                            <label for="file">Perigee</label>
-                            <progress id="file" max="100" value="70">70%</progress>
-                        </div>
-                        <div>
-                            <span>389.4 km</span>
-                        </div>
-                    </div>
-
-                    <div class="information__container">
-                        <div>
-                            <label for="file">Inclination</label>
-                            <progress id="file" max="100" value="70">70%</progress>
-                        </div>
-                        <div>
-                            <span>51.67°</span>
-                        </div>
-                    </div>
-                    <div class="information__container">
-                        <div>
-                            <label for="file">Range to ISS</label>
-                            <progress id="file" max="100" value="70">70%</progress>
-                        </div>
-                        <div>
-                            <span>0.02 km</span>
-                        </div>
-                    </div>
-                </div>
-            <div class="information__buttom">
-                <a href="#" class="gray__words">Power, Engine, Comms</a>
-                <a href="#" class="a__button">MORE</a>
-            </div>
-            </div>
+            <div id="information__2" class="information__item"></div>
+            <div id="paginacion" class="information__buttom"></div>
         </nav>
-    </main> 
+    </main>
+
+    
+    <!-- Check icons -->
+    <!-- <i class='bx bxs-check-circle' style='color:#9499c3'  ></i>
+    <i class='bx bxs-check-circle' style='color:#40c110'  ></i>
+    <i class='bx bxs-check-circle' style='color:#ea7b15'  ></i> -->
+
+    <!-- Nav icons -->
+    <!-- <img src="storage/img/icons/rocket.svg">
+    <i class='bx bx-body' style='color:#e72d2d'></i>
+    <img src="storage/img/icons/comms.svg">
+    <img src="storage/img/icons/prop.svg">
+    <img src="storage/img/icons/mech.svg">
+    <i class='bx bxs-battery-charging bx-rotate-270' style='color:#ffffff'  ></i>
+    <i class='bx bxs-chip' style='color:#ffffff'  ></i>
+    <i class='bx bx-current-location bx-rotate-270' style='color:#ffffff'  ></i>
+    <i class='bx bxs-brightness-half' style="color: #fff"></i>  -->
 </body>
 </html>
+
