--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <script type="module" src="js/main.js" defer></script>
 </head>
 <body>
-
+    <main class="main" id="main">
+        
+    </main>
 </body>
 </html>
