--- a/index.html
+++ b/index.html
@@ -36,22 +36,6 @@
             <article class="section__information__container">
                 <div class="section__information__2">
                     <div>
-                        <div class="carousel__item">
-                            <div class="item__progress__bar">
-                                <div class="progress__value">
-                                    <strong>Title</strong>
-                                    <small>3</small>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="carousel__item">
-                            <div class="item__progress__bar">
-                                <div class="progress__value">
-                                    <strong>Title</strong>
-                                    <small>3</small>
-                                </div>
-                            </div>
-                        </div>
                     </div>
                     <div id="information__table__1" class="information__table__1">
                         <div class="load" style="height: 160px;"></div>
@@ -62,22 +46,6 @@
                 </div>
                 <div class="section__information__3">
                     <div>
-                        <div class="carousel__item">
-                            <div class="item__progress__bar">
-                                <div class="progress__value">
-                                    <strong>Title</strong>
-                                    <small>3</small>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="carousel__item">
-                            <div class="item__progress__bar">
-                                <div class="progress__value">
-                                    <strong>Title</strong>
-                                    <small>3</small>
-                                </div>
-                            </div>
-                        </div>
                     </div>
                     <div id="information__table__2" class="information__table__2">
                         <div class="load" style="height: 160px;"></div>
@@ -87,9 +55,9 @@
             <footer class="footer">
                 <ul>
                     <li>
-                        <a href="#">
-                            <img src="http://www.example.com">
-                            <span>a</span>
+                        <a id ="rockets"href="#">
+                            <i class='bx bxs-rocket'></i>
+                            <span>Rockets</span>
                         </a>
                     </li>
                     <li>
